<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@color/app_blue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:src="@drawable/shoppy_ic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_screen_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@android:color/transparent"
            android:textSize="25sp"
            android:fontFamily="@font/segoe_ui_bold_italic"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_one"
            android:fontFamily="@font/crabmeal"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:background="@android:color/transparent"
            android:fontFamily="@font/crabmeal"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>





</RelativeLayout>